<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:scrollbars="vertical">
        <Spinner
            android:id="@+id/spCompany"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:scrollbars="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbHour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="小时数据" />

            <RadioButton
                android:id="@+id/rbMinute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="分钟数据" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spTimeFilter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"/>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_dark_gray"
        android:padding="6dp"
        android:scrollbars="horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="时间" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D1_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D2_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D3_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D4_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D5_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D6_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D7_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D8_ZH" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_dark_gray"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/color_white"
            android:text="@string/D9_ZH" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/lvData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnBack"
            style="@style/Button"
            android:background="@drawable/btn_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>

</LinearLayout>